@@ -56,6 +56,8 @@
 #ifdef CONFIG_ARMV7M_CMNVECTOR
 #  if defined(CONFIG_ARCH_CHIP_SAM3U)
 #    include "chip/sam3u_vectors.h"
+#  elif defined(CONFIG_ARCH_CHIP_SAM3X) || defined(CONFIG_ARCH_CHIP_SAM3A)
+#    include "chip/sam3x_vectors.h"
 #  elif defined(CONFIG_ARCH_CHIP_SAM4L)
 #    include "chip/sam4l_vectors.h"
 #  elif defined(CONFIG_ARCH_CHIP_SAM4S)
